--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -16,8 +16,13 @@ jobs:
 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
+      - name: Use Node.js 12.22.12
+        uses: actions/setup-node@v1
+        with:
+          node-version: 12.22.12
+
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
-      - uses: actions/checkout@v3
+      - uses: actions/checkout@v2
       - uses: actions/checkout@master
       - uses: actions/setup-node@master
 
